# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  README.md  auteur  test.sh
include/: ft_ls.h  ls.h
include/ls/: ctx.h  ent.h  opt.h
lib/: entry.c  ls.c  print.c  sort.c  utils.c
libft/: Makefile
libft/include/: libft.h
libft/include/libft/: io.h  math.h
libft/src/ds/: ft_vu_dtor.c  ft_vu_end.c  ft_vu_pushc.c  ft_vu_pushn.c  ft_vu_putc.c  ft_vu_realloc.c  ft_vu_removen.c  ft_vu_unshiftc.c
libft/src/math/: ft_pow.c
src/: cli.c  ctx.c  ent.c  ent.h  entry.c  ft_ls.c  ls.c  opt.c  print.c  print.h  sort.c  utils.c
test/: test1.ex  test18.ls  test19.ls  test3.ex
